# alpha-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .envrc  .gitignore  Dockerfile  main.py  pyproject.toml
backend/models/: schemas.py
backend/services/: base.py  market_data.py  technical_indicators.py
backend/tests/: test_market_data.py  test_technical_indicators.py
