[project]
name = "alpha-agent-backend"
version = "0.1.0"
description = "FastAPI backend for alpha-agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "redis>=5.1.0",
    "httpx>=0.27.2",
    "yfinance>=0.2.43",
    "pandas>=2.2.2",
    "pandas-ta>=0.3.14b0",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
run-api = "main:run"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
